chore: fix alignment

--- a/blocks/browse/da-browse/da-browse.css
+++ b/blocks/browse/da-browse/da-browse.css
@@ -63,16 +63,22 @@
   display: flex;
   align-items: center;
   min-height: 28px;
+
+  &::after {
+    content: '';
+    flex-shrink: 0;
+    width: 8px;
+    height: 8px;
+    background-color: currentcolor;
+    mask: url('/img/icons/s2-icon-chevronleft-10-n.svg') center / contain no-repeat;
+    margin-inline: var(--s2-spacing-75);
+    color: currentcolor;
+    display: block;
+    position:relative;
+    top: 1px;
+  }
 }
 
-.da-breadcrumb-sep {
-  flex-shrink: 0;
-  display: block;
-  width: 8px;
-  height: 8px;
-  color: currentColor;
-  margin-inline: var(--s2-spacing-75);
-}
 
 .da-breadcrumb-config {
   display: flex;
